[package]
name = "sample_rust"
version = "0.1.0"
authors = ["趙偉 <zwvista@msn.com>"]
edition = "2018"

[dependencies]
itertools = "0.9.0"
reduce = "0.1"
regex = "1.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }
